Upgrade Java from 17 to 21 LTS
- Updated Maven compiler source and target to Java 21
- Applied OpenRewrite migration recipe for Java 21 compatibility
- All tests passing, no CVE issues, no behavior changes detected